--- a/About.html
+++ b/About.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Jacob's Profile</title>
     <link rel="stylesheet" type="text/css" href="HomePage.css">
+    <style>
+        /* Additional CSS for layout */
+    </style>
 </head>
 <body>
     <header>
@@ -19,5 +22,19 @@
             <h1>About Me</h1>
         </div>
     </div>
+    <div class="profile-container">
+        <div class="profile-image">
+            <img src="IMG_4265.jpg" alt="Jacob's Photo">
+        </div>
+        <div id="right-column">
+            <h3>My name is Jacob. I am a second year student at Ontario Tech University. I am in the IT Networking and Information Security program. </h3>
+        </div>
+    </div>
+    <footer>
+        <div id="footer">
+            <h5>© 2024 by Jacob Bryan</h5>
+            <h5>jacob.bryan@ontariotechu.net</h5>
+        </div>
+    </footer>
 </body>
 </html>
