--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Jacob's Profile</title>
     <link rel="stylesheet" type="text/css" href="HomePage.css">
+    <style>
+        /* Additional CSS for layout */
+    </style>
 </head>
 <body>
     <header>
@@ -19,5 +22,14 @@
             <h1>Contact Me</h1>
         </div>
     </div>
+    <div class="profile-container">
+        
+    </div>
+    <footer>
+        <div id="footer">
+            <h5>© 2024 by Jacob Bryan</h5>
+            <h5>jacob.bryan@ontariotechu.net</h5>
+        </div>
+    </footer>
 </body>
 </html>
