--- a/Projects.html
+++ b/Projects.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Jacob's Profile</title>
     <link rel="stylesheet" type="text/css" href="HomePage.css">
+    <style>
+        /* Additional CSS for layout */
+    </style>
 </head>
 <body>
     <header>
@@ -16,8 +19,17 @@
     </header>
     <div class="centre">
         <div id="banner">
-            <h1>My Portfolio</h1>
+            <h1>My Projects</h1>
         </div>
     </div>
+    <div class="profile-container">
+        
+    </div>
+    <footer>
+        <div id="footer">
+            <h5>© 2024 by Jacob Bryan</h5>
+            <h5>jacob.bryan@ontariotechu.net</h5>
+        </div>
+    </footer>
 </body>
 </html>
