--- a/Projects.html
+++ b/Projects.html
@@ -19,8 +19,13 @@
             <h1>My Projects</h1>
         </div>
     </div>
-    <div class="profile-container">
-        
+    <div class="project-container">
+        <div class="network-image">
+            <img src="network-topology.png" alt="Networking Photo">
+        </div>
+        <div class="description">
+            <p>Image description will fill out later.</p>
+        </div>
     </div>
     <footer>
         <div id="footer">
