--- a/About.html
+++ b/About.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <div id="header">
+        <nav id="header">
             <a href="index.html">Home</a>
             <a href="About.html">About Me</a>
             <a href="Projects.html">Projects</a>
             <a href="Contact.html">Contact Me</a>
-        </div>
+        </nav>
     </header>
     <div class="centre">
         <div id="banner">
