--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div class="profile-container">
     </div>
     <footer>
-        <div id="footer">
+        <address id="footer">
             <h5>© 2024 by Jacob Bryan</h5>
             <h5>jacob.bryan@ontariotechu.net</h5>
-        </div>
+        </address>
     </footer>
 </body>
 </html>
