--- a/Contact.html
+++ b/Contact.html
@@ -53,10 +53,10 @@
         </div>
     </div>
     <footer>
-        <div id="footer">
+        <address id="footer">
             <h5>© 2024 by Jacob Bryan</h5>
             <h5>jacob.bryan@ontariotechu.net</h5>
-        </div>
+        </address>
     </footer>
 </body>
 </html>
