--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacob's Profile</title>
     <link rel="stylesheet" type="text/css" href="HomePage.css">
 </head>
@@ -16,10 +15,16 @@
     </header>
     <div class="centre">
         <div id="banner">
-            <h1>Jacobs Portfolio</h1>
+            <h1>Jacob's Portfolio</h1>
         </div>
     </div>
-    <div class="profile-container">
+    <div class="intro-container">
+        <div class="logo-image">
+            <img src="OTU-logo.jpg" alt="Jacob's Photo">
+        </div>
+        <div class="intro_description">
+            <h3>My name is Jacob. This portfolio has been made as an assignment for my Web and Script Programming course. Here you are able to view information about me, my projects and are able to contact me.</h3>
+        </div>
     </div>
     <footer>
         <address id="footer">
@@ -28,4 +33,3 @@
         </address>
     </footer>
 </body>
-</html>
