--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <img src="OTU-logo.jpg" alt="Jacob's Photo">
         </div>
         <div class="intro_description">
-            <h3>My name is Jacob. This portfolio has been made as an assignment for my Web and Script Programming course. Here you are able to view information about me, my projects and are able to contact me.</h3>
+            <h3>My name is Jacob. This portfolio has been made as an assignment for my Web and Script Programming course. 
+                Here you are able to view information about me, my projects and are able to contact me. 
+            </h3>
         </div>
     </div>
     <footer>
